--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <ul>
       <li><a href="pa1.html">PA1: Image and Signal Processing</a>
       <li><a href="pa2.html">PA2: Mesh Simplification and Progressive Meshes</a></li>
-      <li><a href="pa3.html">PA3: Final Project</a></li>
+      <li><a href="milestone.html">PA3: SPH Milestone report
+      <li><a href="pa3.html">PA3: SPH</a></li>
     </ul>
   </body>
 </html>
