--- a/pa3.html
+++ b/pa3.html
@@ -9,6 +9,22 @@
     <h1>PA3: Smooth Particle Hydrodynamics</h1>
     <hr>
     <section>
+      <h2>Downloads</h2>
+      <hr>
+      <p><a href="water.zip">Linux Binary</a> - Compiled with GCC 5.4.0 on the current Ubuntu LTS (16.04). Tested with an NVidia Geforce GTX 750 TI</p>
+      <h1>Prerequisites</h1>
+      <hr>
+      <p>This program has some library prerequisites. Please ensure you have GLFW 3 and GLEW installed. This program uses OpenGL for display purposes, and requires at least OpenGL 4.1. This program uses std::thread for concurrency, and as such, requires your operating system's threads implementation. For linux, this is pthread.
+    </section>
+    <section>
+      <h2>Usage</h2>
+      <hr>
+      <p>To run the program, download the binary and unzip it. From the command line, change to the directory you unzipped the binary into and execute <code>./water</code> and you should initially see an empty skybox. At this point, the simulation is waiting for you to start it; I felt it would be nice if you could tell the program when to "go" so that you are ready to watch. As with PA2, the arrow keys, along with page up and page down control the camera and object translation. Initially, the program is in camera rotation mode, but pressing t puts the program in translation mode. Translation mode translates the entire particle system, there is no per-particle controls. I removed object rotation mode, as I felt it was largely redundant with camera rotation, and a bit hard to tell how the simulation is oriented.</p>
+      <p>If you press s, the surface will be visualized. This is purely asthetic, and these "particles" are not accounted for by the simulation. This will draw a patch centered at (x, z) = (0, 0). Pressing s again will hide the surface. The user can toggle between surfaces by pressing 1, 2, 3, or 4, which will toggle between the "narrow bowl", "wide bowl", "ripple step", and "peaks and valleys" surfaces respectively (more on what these are below). Pressing these keys will smoothly interpolate between the surfaces; pressing a surface key during the interpolation is an error and will be ignored.</p>
+      <p>To start the simulation, press the space bar. Particles will begin to pour down from the top in a swirling pattern. Eventually they should come to rest. Pressing space again will restart the simulation. Pressing r will reset the simulation to the state it's in at the start. This can be useful if you want to reset everything, then position the camera and select a surface prior to starting the simulation.</p>
+      <p>In addition to these main simulation controls, there are a variety of extra features. To toggle rendering the skybox in wireframe mode, press w. To speed up or slow down the flow of time in the simulation press , and . respectively (logically &#60; and &#62;). To change the rotation of the lights, press l. This will cycle between stationary, clockwise, and counterclockwise. To enable or disable concurrency, press c (Concurrency is enabled by default. Expect a framerate drop with concurrency disabled). To toggle Voxel rendering on or off, press m. To exit the program, press esc (or use the controls provided by your window manager).</p>
+    </section>
+    <section>
       <h2>About SPH</h2>
       <hr>
       <p>For project 3, I have implemented an SPH fluid simulation based on a <a href="http://cseweb.ucsd.edu/classes/wi17/cse169-a/readings/2014_EG_SPH_STAR.pdf">State of the Art report published in Eurographics 2014</a> by Jens Orthmann, Barbara Solenthaler, Andreas Kolb, and Matthias Teschner.</p>
@@ -19,7 +35,7 @@
       <h2>Navier-Stokes and the Calculus Object</h2>
       <hr>
       <p>The first order of business in a physics simulation is to be able to evaluate the relevant equations. For this section, I'll refer to the equations from the STAR report by number. The STAR report lays out formulas to approximate the Navier-Stokes equation. Notably, I do not consider the incompressability term of the Navier-Stokes equation. The STAR report lays out methods to approximate it to within some threshold, unfortunately I did not have time to get these methods working.</p>
-      <p>To implement Navier-Stokes and its related equations, I created a Calculus object. The Calculus object has methods that correspond to the various equations in section 1 of the STAR report. Most of these equations take parameters, and this is exactly why I decided to make this an object instead of a suite of functions. When the program initializes, it creates an instance of Calculus. It then populates the parameters of the equations. In this way, it's easy to tweak the numbers without going through dozens of functions and fining every occurance of some literal value.</p>
+      <p>To implement Navier-Stokes and its related equations, I created a Calculus object. The Calculus object has methods that correspond to the various equations in section 1 of the STAR report. Most of these equations take parameters, and this is exactly why I decided to make this an object instead of a suite of functions. When the program initializes, it creates an instance of Calculus. It then populates the parameters of the equations. In this way, it's easy to tweak the numbers without going through dozens of functions and finding every occurance of some literal value.</p>
       <p>Another cornerstone of the math portion of SPH is the kernel function. We need to be able to interpolate between values based on particle distances. The kernel calls out to a sub-function that is some function that "should be close to a Gaussian." The STAR report suggests a function (equation 5), and my implementation uses this function. However, the Calculus object is generic, so it takes as parameters a function, and its derivative so a different function can be swapped in.</p>
       <p>In total, the Calculus object provides methods to calculate the gradient of a scalar field, the divergence of a vector field, the laplacians of scalar or vector fields, as well as a method to compute a pressure field, a method to compute the timestep for integration, and the kernel function itself.</p>
       <p>As mentioned above, the Calculus object can compute the integration timestep. I'm doing numerical integration (not actually handled by the Calculus object), and as you likely know, if you use too large of a delta T, your simulation blows up. For this simulation, I can calculate an appropriate timestep that is a function of the radius of influence (the support radius) of a particle to ensure that this does not happen.</p>
@@ -45,7 +61,7 @@
     <section>
       <h2>The Algorithm</h2>
       <hr>
-      <p>The STAR report outlines four algorithms for advancing the simulation. I implemented the first of these four. The pseudocode for the algorithm itself can be found in the STAR report as <em>Algorithm 1</em>. Given the spatial hash table discussed above, I are able to find the neighborhood set efficiently. Next, I calculate the density and pressures of each particle. After that, I calculate the forces of pressure, viscosity, and gravity. Finally, I perform Euler integration to calculate the new velocities and positions of each particle. After all the particles are updated, I have a new set of particles. I determine which need to be updated in the spatial hash table, overwrite the old particles, and then update the hash table as nessesary. The result is something that looks very much like water:</p>
+      <p>The STAR report outlines four algorithms for advancing the simulation. I implemented the first of these four. The pseudocode for the algorithm itself can be found in the STAR report as <em>Algorithm 1</em>. Given the spatial hash table discussed above, I am able to find the neighborhood set efficiently. Next, I calculate the density and pressures of each particle. After that, I calculate the forces of pressure, viscosity, and gravity. Finally, I perform Euler integration to calculate the new velocities and positions of each particle. After all the particles are updated, I have a new set of particles. I determine which need to be updated in the spatial hash table, overwrite the old particles, and then update the hash table as nessesary. The result is something that looks very much like water:</p>
       <div class="imageCompare"><a href="https://drive.google.com/file/d/0Bx6BpheCXcBWdGMtQnBfQUhWekU/view?usp=sharing"><img src="images/pa3/waterSS1.png"></a></div>
       <p>For this image, and all images in this report, you can click on the image to see a video of the program in action.</p>
     </section>
@@ -56,7 +72,7 @@
       <pre>procedure getTangentPlane(Particle p)
    let plane be an uninitialized TangentPlane
    let yMin = f(p.x, p.z)
-   if (p.y > yMin + SOME_SMALL_CONSTANT)
+   if (p.y &#62; yMin + SOME_SMALL_CONSTANT)
       let plane.abovePlane = true
       return plane
 
@@ -66,7 +82,7 @@
    plane.point = (p.x, yMin, p.z)
    plane.normal = normalize((xPrime, -1, zPrime))
 
-   if plane.normal.y < 0
+   if plane.normal.y &#60; 0
       let plane.normal = -plane.normal
 
    let planeToPos = p - plane.point
@@ -81,7 +97,7 @@
    let d = |plane.point . plane.normal|
    let plane.distance = |(plane.normal . p) - d|
 
-   if (plane.normal . planeToPos) >= 0
+   if (plane.normal . planeToPos) &#62;= 0
       let plane.abovePlane = true
    else
       let plane.abovePlane = false
@@ -93,7 +109,7 @@
       <p>After finding yMin, I find the derivatives with respect to x and z. From this, I get a point on the plane, and a normal vector to the plane. I then invert the normal vector if it's y component is negative. Since I need this normal vector to represent the "floor", I need it's y component to be positive. This is safe to do because the inverse of a vector normal to a plane is also a normal vector to that plane.</p>
       <p>Next I construct matrices to convert to and from the space of the tangent planes by constructing the fromTangentSpace vector out of the normal vector and two orthogonal vectors. I invert this matrix to get the toTangentSpace matrix. The reason I need this is to calculate friction and elasticity forces. The elasticity forces point straight out from the plane, and the friction forces point along the plane. These are conceptually much easier to deal with if "out from the plane" means "a vector that points in the direction of the unit vector j".</p>
       <p>Finally, having done the heavy lifting, I calculate the rest of the parameters and return the plane. I convert the point on the plane to tangent plane space, I calculate the distance from the plane, and I calculate if the particle is above the plane. I need to do this because I only short circuit if the particle is more than some threshold above the plane.</p>
-      <p>At the beginning of an update iteration, the tangent plane to each particle is found. I use these tangent planes in two places. The primary location is after integration. I move all the particles, and then I have to check if any particles are out of bounds. If a particle is below its corresponding tangent plane, and the distance from the particle to the plane is greater than some "hard offset", then the particle needs to be corrected. First the particle is converted to tangent plane space. The particle's velocity in Y is inverted, and the particle's modified is limited by friction and elasticity properties. The particle is converted back from tangent plane space and updated. During this process, the particle's velocity is also limited to be within some range. This shouldn't be neccesary, but unfortunately the simulation seems to break down if this not done. I also think it looks better this way.</p>
+      <p>At the beginning of an update iteration, the tangent plane to each particle is found. I use these tangent planes in two places. The primary location is after integration. I move all the particles, and then I have to check if any particles are out of bounds. If a particle is below its corresponding tangent plane, and the distance from the particle to the plane is greater than some "hard offset", then the particle needs to be corrected. First the particle is converted to tangent plane space. The particle's velocity in Y is inverted, and the particle's modified velocity is limited by friction and elasticity properties. The particle is converted back from tangent plane space and updated. During this process, the particle's velocity is also limited to be within some range. This shouldn't be neccesary, but unfortunately the simulation seems to break down if this not done. I also think it looks better this way. The particle's position is also modified so that it is above the plane.</p>
       <p>The second place the tangent plane is used is right at the beginning. Immediately after calculating the neighborhood set of each particle, the particle is tested to see if it is below the plane. If it is, an extra "virtual" particle is created and placed just slightly below the particle, based on infromation in the TangentPlane. This particle is then inserted into the neighborhood set. This particle is not included in the pressure and density calculations, it instead gets the pressure and density of the current particle being considered. The net result of all of this is that when the pressure gradient is calculated, the area of least pressure is shifted away from the edge, providing a bit of force away from the edge. If this is not done, the particles have a strange tendancy to stick to the edge of the BoundingRegion, rather than filling it.</p>
       <p>Four bounding regions are provided:</p>
       <pre>narrowBowl(x, z) = yMin + (0.05 * (x^2 + z^2))
@@ -107,19 +123,16 @@ peaksAndValleys(x, z) = yMin + (10 * sin(x / 4)) + (10 * cos(z / 4))
       <div class="imageCompare"><a href="https://drive.google.com/file/d/0Bx6BpheCXcBWUjJXOWJLODZVc28/view?usp=sharing"><img src="images/pa3/explody.png"></a></div>
     </section>
     <section>
-      <h1>So What Else is New?</h1>
+      <h1>Post-Milestone Work Done</h1>
       <hr>
-      <p>Of course, most of this is old news if you're read the progress report I did on this project. But what else is new?</p>
-    </section>
-    <section>
       <h2>Optimization and Best Practices</h2>
       <hr>
-      <p>While hardly the most exciting thing in the world, I've spent a good amount of time refining the code, optimizing codepaths, and doing things the "right way" rather than the "right now way". I spent some time with the profiler and found many performance bottlnecks. In particular, my spatial hash table implementation was terribly inefficient.</p>
+      <p>While hardly the most exciting thing in the world, I've spent a good amount of time refining the code, optimizing codepaths, and doing things the "right way" rather than the "right now way". I spent some time with the profiler and found many performance bottlnecks. In particular, my spatial hash table implementation was terribly inefficient. One noteworthy offender was a table size method that was consuming <em>60%</em> of my runtime.</p>
       <p>In addition to performance optimizations, I looked into how best to utilize instanced drawing in OpenGL. In order to draw the particles, I'm drawing NUM_PARTICLES instances of a sphere. Each instance takes a toWorld matrix for the whole particle system and a particle position. Each particle is translated by the particle's position, then transformed by the toWorld matrix. This was accomplished by passing in a gigantic array of matrices and vectors as uniforms. This felt super gross to me, but I did not know a better way to do this. After some research, I discovered it's possible to set vertex attributes on a per instance basis, rather than a per-vertex basis. I changed my shaders to expect a position as a vertex attribute, and then pass in the particle position as a per-instance vertex attribute. I was also passing in NUM_PARTICLES copies of the toWorld matrix for some inexplicable reason. This issue was corrected. Previously, the physical limits my my computer's graphics cards mandated only 500 particles per draw, and now I am able to draw 1000 particles, and likely thousands more.</p>
     </section>
     <section>
       <h2>Concurrency</h2>
-      <br>
+      <hr>
       <p>A major new feature of the program since the milestone is the implementation of concurrency in the simulation update function. The way that I've designed the update function is to compute a new set of particles from the old set, rather than update in place. This greatly reduced the complexity of a concurrent solution; as each calculation updates only the new copy of the data, while the old copy remains unchanged. This allows a lock-free solution to concurrency.</p>
       <p>Basically, every time the algorithm says "forall particles i", the set of particles can be partitioned into NUM_THREADS portions, and solved in parallel. My program queries the number of threads supported by the processor, and splits the array of particles into that many chunks and solves it in parallel. Thanks to this new concurrent solver, I am able to simulate using 1000 particles at 60 frames per second, where I couldn't even simulate 500 at 60 frames per second consistently previously.</p>
     </section>
@@ -130,7 +143,8 @@ peaksAndValleys(x, z) = yMin + (10 * sin(x / 4)) + (10 * cos(z / 4))
       <p>Luckily for me, my spatial hash table should serve nicely. The basic scheme I've gone with is: any hash table cel with a particle in it is below the surface, all other cels are above the surface. With just this information alone, we have enough to implement "Minecraft" style voxel rendering, where the surface is approximated using cubes:</p>
       <div class="imageCompare"><a href="https://drive.google.com/file/d/0Bx6BpheCXcBWM1pjT2N5OV9HR00/view?usp=sharing"><img src="images/pa3/voxels.png"></a></div>
       <p>The next step is to implement Marching Cubes, where a smooth triangulation is generated. The first step is to determine where individual voxels intersect with the surface. In order to do this, for each voxel I find the neighborhood of the cel. I partition the neighborhood into 8 quadrants (one for each of the 8 corners of a cube). For each quadrant, if that quadrant is empty, then that quadrant is above the surface. Since the voxel itself is below the surface, that means that this quadrant represents a transition point between being below and above the surface.</p>
-      <p>I am able to find these transition points, however this is as far as I got. Unfortunately, time has ran out, and it's time to close the book on this project.</p>
+      <p>I am able to find these transition points, however this is as far as I got. My thinking was that the volume of the water consists of the area within the support radii of all particles. However, it was not immediately clear to me how to go about calculating the exact point where this support radius was for each voxel. Unfortunately, time ran out on the project before I was able to come up with a good solution to this problem.</p>
+      <div class="imageCompare"><a href="https://drive.google.com/file/d/0Bx6BpheCXcBWSks1NWpUdHBsWk0/view?usp=sharing"><img src="images/pa3/glamor.png"></a></div>
     </section>
     <section>
       <hr>
